--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
+seaborn==0.10.0
+nas_bench_201==1.3
+numpy==1.18.5
+Keras==2.4.3
+tensorflow_gpu==2.3.1
 tqdm==4.50.2
 torch==1.3.0
-graphviz==0.10.1
-Keras==2.4.3
-numpy==1.19.4
-tabulate==0.8.7
-pandas==1.1.4
 torchvision==0.4.1
-nas_bench_201==1.3
-matplotlib==3.2.2
-tensorflow>=2.3.0
+tabulate==0.8.7
 dataset_utils==0.0.2
+graphviz==0.10.1
+pandas==1.1.4
+matplotlib==3.2.2
 Pillow==8.0.1
+scikit_learn==0.23.2
+tensorflow==2.3.1
