--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ seaborn==0.10.0
 nas_bench_201==1.3
 numpy==1.18.5
 Keras==2.4.3
-tensorflow_gpu==2.3.1
+tensorflow_gpu>=2.3.1
 tqdm==4.50.2
 torch==1.3.0
 torchvision==0.4.1
@@ -13,4 +13,5 @@ pandas==1.1.4
 matplotlib==3.2.2
 Pillow==8.0.1
 scikit_learn==0.23.2
-tensorflow==2.3.1
+tensorflow>=2.3.1
+neptune-client==0.4.125
